config/sudo/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Mon Mar 23 02:43:54 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:LO - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -i lo -m conntrack --ctstate NEW -j LO
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m conntrack --ctstate NEW -j TCP
-A INPUT -j LOG --log-prefix DROPPED --log-level 6
-A INPUT -j DROP
-A LO -d 127.0.0.1/32 -p tcp -m tcp --dport 6010:6023 -j ACCEPT
-A LO -j LOG --log-prefix LO --log-level 6
-A LO -j DROP
-A TCP -p tcp -m tcp --dport 12724 -j ACCEPT
-A TCP -p tcp -m tcp --dport 12725 -j ACCEPT
-A TCP -j LOG --log-prefix TCP --log-level 6
-A TCP -j DROP
-A UDP -j LOG --log-prefix UDP --log-level 6
-A UDP -j DROP
COMMIT
# Completed on Mon Mar 23 02:43:54 2015
# Generated by iptables-save v1.4.21 on Mon Mar 23 02:43:54 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Mar 23 02:43:54 2015
# Generated by iptables-save v1.4.21 on Mon Mar 23 02:43:54 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Mar 23 02:43:54 2015
# Generated by iptables-save v1.4.21 on Mon Mar 23 02:43:54 2015
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon Mar 23 02:43:54 2015
# Generated by iptables-save v1.4.21 on Mon Mar 23 02:43:54 2015
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon Mar 23 02:43:54 2015
